--- a/pom.xml
+++ b/pom.xml
@@ -207,11 +207,11 @@
     <maven.min.version>3.3.9</maven.min.version>
 
     <!-- Contains all shaded thirdparty dependencies -->
-    <ratis.thirdparty.version>1.0.8</ratis.thirdparty.version>
+    <ratis.thirdparty.version>1.0.9-c796a8e-SNAPSHOT</ratis.thirdparty.version>
 
     <!-- Need these for the protobuf compiler. *MUST* match what is in ratis-thirdparty -->
-    <shaded.protobuf.version>3.25.5</shaded.protobuf.version>
-    <shaded.grpc.version>1.69.0</shaded.grpc.version>
+    <shaded.protobuf.version>3.25.6</shaded.protobuf.version>
+    <shaded.grpc.version>1.71.0</shaded.grpc.version>
 
     <!-- Test properties -->
     <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
